--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,9 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
+                <a class="nav-link" href="#">MealMate</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">Sell</a>
               </li>
               <li class="nav-item">
@@ -33,32 +36,11 @@
         </div>
     </nav>
 
-    <div class = "mapContainer">
-        <h1>infoga MAP här</h1>
+    <div class = "container">
+        
     </div>
     
-    <h2 class="foodNearMe">Food near me</h2>
-    <div class="adcontainer">
-      <!-- lägg till kort från databas sen-->
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
 
-      <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-      </div>
-
-
-    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
