--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Log in</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sign up</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -40,6 +46,20 @@
         
     </div>
     
+
+      <div class="card">
+          <!--<img src="..." class="card-img-top" alt="..."> -->
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+      </div>
+
+
+    </div>
+    <div id="signUpContainer"></div>
+    <div id="logInContainer"></div>
 
 
     <!-- Optional JavaScript -->
