started on a footer

--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,8 @@
 
   <div id="signUpContainer"></div>
   <div id="logInContainer"></div>
+
+  <div class="footer"></div>
   
 
   <!-- Optional JavaScript -->
