La till sell filer

--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,7 @@
 
   <div class = "container"></div>
 
+  <div id="sellContainer"></div>
   <div id="signUpContainer"></div>
   <div id="logInContainer"></div>
 
