--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,7 @@
   <div id="signUpContainer"></div>
   <div id="logInContainer"></div>
 
-  <div class="footer"></div>
+  <div id="footer"></div>
   
 
   <!-- Optional JavaScript -->
