--- a/client/footer.html
+++ b/client/footer.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <body>
-  <div class="container">
+  <div class="footer">
       <!-- Footer  got from bootsrap and modified-->
     <footer class="text-center text-lg-start bg-body-tertiary text-muted">
     <!-- Section: Social media -->
@@ -38,8 +38,8 @@
     <!-- Section: Social media -->
 
     <!-- Section: Links  -->
-    <section class="">
-      <div class="container text-center text-md-start mt-5">
+    <section class="links">
+      <div class="links text-center text-md-start mt-5">
         <!-- Grid row -->
         <div class="row mt-3">
           <!-- Grid column -->
