--- a/client/footer.html
+++ b/client/footer.html
@@ -49,8 +49,9 @@
               <i class="fas fa-gem me-3"></i>MealMate
             </h6>
             <p>
-              Here you can use rows and columns to organize your footer content. Lorem ipsum
-              dolor sit amet, consectetur adipisicing elit.
+              Mealmate wish to revolutionize student dining by creating a
+              community where every meal is an opportunity for affordable
+              indulgance, culinary expolartion, and shared sustanability.
             </p>
           </div>
           <!-- Grid column -->
@@ -62,16 +63,10 @@
               Products
             </h6>
             <p>
-              <a href="#!" class="text-reset">Angular</a>
+              <a href="#!" class="text-reset">Lunchboxes</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">React</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Vue</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Laravel</a>
+              <a href="#!" class="text-reset">Boxes</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -101,13 +96,12 @@
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-            <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+            <p><i class="fas fa-home me-3"></i> Linköping, Diplomatgatan 1</p>
             <p>
               <i class="fas fa-envelope me-3"></i>
-              info@example.com
+              MealMate@gmail.com
             </p>
-            <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-            <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+            <p><i class="fas fa-phone me-3"></i> +46 70-90 00 000</p>
           </div>
           <!-- Grid column -->
         </div>
