--- a/client/sell.html
+++ b/client/sell.html
@@ -8,26 +8,26 @@
         <h3 style="text-align: center;">Please fill in the details of the lunchbox you wish to sell below:</h3>
             <div class="form-group">
                 <label for="lunchboxTitle">Title:</label>
-                <input type="text" class="form-control" id="lunchboxTitle" name="lunchboxTitle" required>
+                <input type="text" class="sellinput" id="lunchboxTitle" name="lunchboxTitle" required>
             </div>
             <div class="form-group">
                 <label for="lunchboxDescription">Description:</label>
-                <textarea class="form-control" id="lunchboxDescription" name="lunchboxDescription" rows="4"
+                <textarea class="sellinput" id="lunchboxDescription" name="lunchboxDescription" rows="4"
                     required></textarea>
             </div>
             <div class="form-group">
                 <label for="lunchboxMadeDate">Made Date:</label>
-                <input type="date" class="form-control" id="lunchboxMadeDate" name="lunchboxMadeDate" required>
+                <input type="date" class="sellinput" id="lunchboxMadeDate" name="lunchboxMadeDate" required>
             </div>
             <div class="form-group">
                 <label for="lunchboxAllergens">Allergens:</label>
-                <input type="text" class="form-control" id="lunchboxAllergens" name="lunchboxAllergens">
+                <input type="text" class="sellinput" id="lunchboxAllergens" name="lunchboxAllergens">
             </div>
             <div class="form-group">
                 <label for="lunchboxImage">Upload Image:</label>
-                <input type="file" class="form-control-file" id="lunchboxImage" name="lunchboxImage">
+                <input type="file" class="sellinput-file" id="lunchboxImage" name="lunchboxImage">
             </div>
-            <button type="submit" class="btn btn-primary">Create Ad</button>
+            <button type="submit" class="btn btn-primary" id="submitCreateAd">Create Ad</button>
         </form>
     </div>
 </body>
