started my profile

--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Sign up</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">My profile</a> <!--Ändra till en ikon likt kundvagn-->
+              </li>
             </ul>
           </div>
         </div>
