--- a/client/contact.html
+++ b/client/contact.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html lang="en">
+
 <body>
-
 <div class="contactContainer">
-
-
-    <h2>Contact Info</h2>
+    <h2 class="contactTitle">Contact Info</h2>
     <table id="contact-info">
       <tr>
         <th>MealMate</th>
@@ -27,9 +25,46 @@
       </tr>
     </table>
 
-    <h4></h4>
+    <h4 class="contactFormTitle">Contact Us</h4>
 
-    <form>
+    <form id="contactForm">
+      <div class="form-group">
+          <label for="input-name">Name:</label>
+          <input type="text" class="contactInput" id="input-name" name="name" required>
+      </div>
+
+      <div class="form-group">
+          <label for="input-email">E-mail:</label>
+          <input type="email" class="contactInput" id="input-email" name="email" required>
+      </div>
+
+      <div class="form-group">
+          <label for="input-message">Message:</label>
+          <textarea class="contactInput" id="input-message" name="message" rows="10" required></textarea>
+      </div>
+
+      <button type="submit" class="contactButton">Send</button>
+
+    <!-- <form id="contact-form">
+      <div class="form-group">
+        <label for="input-name">Name</label>
+        <input type="text" class="contactInput" id="input-name">
+      </div>
+      
+      <div class="form-group">
+        <label for="input-email">E-mail</label>
+        <input type="email" class="contactInput" id="input-email">
+      </div>
+
+      <div class="form-group">
+        <label for="input-message">Message</label>
+        <textarea class="contactInput" id="input-message" rows="10"></textarea>
+      </div>
+    </form>
+
+    <button id="send-form" class="contactButton">Send</button>
+  -->
+   <!-- <form>
       <div class="form-group">
         <label for="input-name">Name</label>
         <input type="text" class="form-control" id="input-name">
@@ -47,7 +82,7 @@
     </form>
 
     <button id="send-form" onclick="alertUser()">Send</button>
-
+  -->
   </div>
 </body>
 </html>
