--- a/client/signup.html
+++ b/client/signup.html
@@ -14,21 +14,33 @@
                     <form id="Signupform">
                         <div class="form-group">
                             <label for="email">Email:</label>
-                            <input type="text" class="form-control" id="email" name="email">
+                            <input type="text" class="form-control" id="email" name="email" required>
                         </div>
                         <div class="form-group">
                             <label for="name">Name:</label>
-                            <input type="text" class="form-control" id="name" name="name">
+                            <input type="text" class="form-control" id="name" name="name" required>
                         </div>
                         <div class="form-group">
                             <label for="password">Password:</label>
-                            <input type="text" class="form-control" id="password" name="password">
+                            <input type="text" class="form-control" id="password" name="password" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="pnum">Phone Number:</label>
+                            <input type="text" class="form-control" id="pnum" name="pnum" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="university">University:</label>
+                            <input type="text" class="form-control" id="university" name="university" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="studentid">Student ID:</label>
+                            <input type="text" class="form-control" id="studentid" name="studentid" required>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="signUpBtn">Sign up</button>
+                    <button type="button" class="btn btn-primary" id="signUpBtn" disabled>Sign up</button>
                 </div>
             </div>
         </div>
