--- a/client/index.html
+++ b/client/index.html
@@ -14,31 +14,40 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg" style="background-color: #263a4e;">
         <div class="container-fluid">
-          <a id="mealMateLink" class="navbar-brand larger-text" href="#">MealMate</a>
+          <a id="mealMateLink" class="navbar-brand larger-text" href="#" style="color:white;">MealMate</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Sell</a>
+                <a class="nav-link" href="#" style="color:white;">Sell</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#"style="color:white;">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Log in</a>
+                <a class="nav-link" href="#"style="color:white;">Log in</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Sign up</a>
+                <a class="nav-link" href="#"style="color:white;">Sign up</a>
               </li>
             </ul>
+            <div class="ml-auto">
+              <a class="navbar-profile" href="#" id="profile">
+                  <img src="images/ProfileSymbol.png" style="width: 35px; height: 35px; margin-right: 15px; margin-top: 10px;">
+              </a>
+              <a class="navbar-basket" href="#" id="basket">
+                  <img src="images/basket.png" style="width: 35px; height: 35px; margin-right: 15px; margin-top: 10px;">
+              </a>
+          </div>
+          </a>
           </div>
         </div>
     </div>
-  </nav>
+    </nav>
 
   <div class = "container"></div>
 
