--- a/client/index.html
+++ b/client/index.html
@@ -37,10 +37,10 @@
             </ul>
             <div class="ml-auto">
               <a class="navbar-profile" href="#" id="profile">
-                  <img src="images/ProfileSymbol.png" style="width: 35px; height: 35px; margin-right: 15px; margin-top: 10px;">
+                  <img src="Images/Profilesymbol.png" style="width: 35px; height: 35px; margin-right: 15px; margin-top: 10px;">
               </a>
               <a class="navbar-basket" href="#" id="basket">
-                  <img src="images/basket.png" style="width: 35px; height: 35px; margin-right: 15px; margin-top: 10px;">
+                  <img src="Images/Basket.png" style="width: 35px; height: 35px; margin-right: 15px; margin-top: 10px;">
               </a>
           </div>
           </a>
