--- a/client/signup.html
+++ b/client/signup.html
@@ -30,7 +30,14 @@
                         </div>
                         <div class="form-group">
                             <label for="university">University:</label>
-                            <input type="text" class="form-control" id="university" name="university" required>
+                            <select class="form-control" id="university" name="university" required>
+                                <option value="">Please select a university</option>
+                                <option value="university1">Linköpings Universitet</option>
+                                <option value="university2">Lunds Universitet</option>
+                                <option value="university3">Kungliga Tekniska Högskolan</option>
+                                <!-- Add more options here as needed -->
+                           </select>
+                          <!--   <input type="text" class="form-control" id="university" name="university" required> --> 
                         </div>
                         <div class="form-group">
                             <label for="studentid">Student ID:</label>
