--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="sell.css">
+    <link rel="stylesheet" href="shoppingcart.css">
 
     <title>MealMate</title>
 </head>
@@ -21,7 +22,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
               <li class="nav-item">
                 <a class="nav-link" href="#" style="color:white;">Sell</a>
               </li>
@@ -29,10 +30,13 @@
                 <a class="nav-link" href="#"style="color:white;">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"style="color:white;">Log in</a>
+                <a id="logInLink" class="nav-link" href="#"style="color:white;">Log in</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"style="color:white;">Sign up</a>
+                <a id ="signUpLink" class="nav-link" href="#"style="color:white;">Sign up</a>
+              </li>
+              <li class="nav-item">
+                <a id ="logOutLink" class="nav-link d-none" href="#"style="color:white;">Log out</a>
               </li>
             </ul>
             <div class="ml-auto">
@@ -50,8 +54,8 @@
     </nav>
 
   <div class = "container"></div>
-  <div id="signUpContainer"></div>
-  <div id="logInContainer"></div>
+  <div id="signupContainer"></div>
+  <div id="loginContainer"></div>
 
   <div id="footer"></div>
   
@@ -64,6 +68,7 @@
   <script src="login.js"></script>
   <script src="signup.js"></script>
   <script src="sell.js"></script>
+  <script src="shoppingcart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
