--- a/client/login.html
+++ b/client/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <body>
-    <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -18,16 +18,37 @@
                         </div>
                         <div class="form-group">
                             <label for="password">Password:</label>
-                            <input type="text" class="form-control" id="password" name="password">
+                            <input type="password" class="form-control" id="password" name="password">
+                            <small id="passwordError" class="text-danger"></small>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="logInBtn">Log in</button>
+                    <button type="button" class="btn btn-primary" id="logInBtn" style="background-color: #263a4e; color: white; border-color: transparent;">Log in</button>
                 </div>
             </div>
         </div>
-      </div>    
+      </div> 
+      
+      <div class="modal fade" id="logout-modal" tabindex="-1" role="dialog" aria-labelledby="logoutModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="signoutLabel">Signing out</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure that you want to sign out?</p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Stay signed in</button>
+                    <button type="button" class="btn btn-primary" id="logoutBtn" style="background-color: #263a4e; color: white; border-color: transparent;">Yes, sign out</button>
+                  </div>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
