--- a/client/signup.html
+++ b/client/signup.html
@@ -15,18 +15,21 @@
                         <div class="form-group">
                             <label for="email">Email:</label>
                             <input type="text" class="form-control" id="email" name="email" required>
+                            <p id="emailError" style="color: red; display: none;">Email must contain '@'</p>
+                    
                         </div>
                         <div class="form-group">
-                            <label for="name">Name:</label>
+                            <label for="name">Full Name:</label>
                             <input type="text" class="form-control" id="name" name="name" required>
                         </div>
                         <div class="form-group">
                             <label for="password">Password:</label>
-                            <input type="text" class="form-control" id="password" name="password" required>
+                            <input type="password" class="form-control" id="password" name="password" required>
                         </div>
                         <div class="form-group">
                             <label for="pnum">Phone Number:</label>
                             <input type="text" class="form-control" id="pnum" name="pnum" required>
+                            <p id="phoneError" style="color: red; display: none;">Phone number may only contain one '+'' and/or numbers</p>
                         </div>
                         <div class="form-group">
                             <label for="university">University:</label>
@@ -40,10 +43,12 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="signUpBtn" disabled>Sign up</button>
+                    <button type="button" class="btn btn-primary" onclick="validateAndSubmit()" id="signUpBtn" style="background-color: #263a4e; color: white; border-color: transparent;" disabled>Sign up</button>
+                    
                 </div>
             </div>
         </div>
       </div>
+
 </body>
 </html>
