--- a/client/sell.html
+++ b/client/sell.html
@@ -21,11 +21,11 @@
             </div>
             <div class="form-group">
                 <label for="lunchboxAllergens">Allergens:</label>
-                <input type="text" class="sellinput" id="lunchboxAllergens" name="lunchboxAllergens">
+                <input type="text" class="sellinput" id="lunchboxAllergens" name="lunchboxAllergens" required>
             </div>
             <div class="form-group">
                 <label for="lunchboxImage">Upload Image:</label>
-                <input type="file" class="sellinput-file" id="lunchboxImage" name="lunchboxImage">
+                <input type="file" class="sellinput-file" id="lunchboxImage" name="lunchboxImage" required>
             </div>
             <button type="submit" class="btn btn-primary" id="submitCreateAd">Create Ad</button>
         </form>
