css ändrat i profilen, index för att css ska funka

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="sell.css">
     <link rel="stylesheet" href="shoppingcart.css">
+    <link rel="stylesheet" href="profile.css">
 
     <title>MealMate</title>
 </head>
