--- a/client/index.html
+++ b/client/index.html
@@ -17,9 +17,9 @@
 </head>
 <body style="padding-top: 100px;">
 
-    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #263a4e;">
+    <nav class="navbar navbar-expand-lg" style="background-color: #006267;">
         <div class="container-fluid">
-          <a id="mealMateLink" class="navbar-brand larger-text" href="#" style="color:white;">MealMate</a>
+          <a id="mealMateLink" class="navbar-brand larger-text" href="#" style="color:white;"><strong>MealMate</strong></a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
