--- a/client/sell.html
+++ b/client/sell.html
@@ -5,7 +5,8 @@
     <div id="sellContainer">
         <form id="sellForm">
             <!-- Instructional text added here -->
-        <h3 style="text-align: center;">Please fill in the details of the lunchbox you wish to sell below:</h3>
+            <h3 style="text-align: center;"><strong>Please fill in the details of the lunchbox you wish to sell
+                    below:</strong></h3>
             <div class="form-group">
                 <label for="lunchboxTitle">Title:</label>
                 <input type="text" class="sellinput" id="lunchboxTitle" name="lunchboxTitle" required>
@@ -21,7 +22,10 @@
             </div>
             <div class="form-group">
                 <label for="lunchboxAllergens">Allergens:</label>
-                <input type="text" class="sellinput" id="lunchboxAllergens" name="lunchboxAllergens" required>
+                <input type="text" class="sellinput" id="lunchboxAllergens" name="lunchboxAllergens" onclick="showAllergensList()" readonly>
+                    <div id="allergensList" class="allergens-list">
+                    <!-- Dropdown list of allergens will be shown here -->
+                    </div>
             </div>
             <div class="form-group">
                 <label for="lunchboxImage">Upload Image:</label>
@@ -30,6 +34,12 @@
             <button type="submit" class="btn btn-primary" id="submitCreateAd">Create Ad</button>
         </form>
     </div>
+    <!--<div id="SellQuestionsContainer">
+        <h3><strong>Do you have any questions about how to start selling your lunchboxes?</strong></h3>
+        <p>If you have any questions, click the button below to see frequently asked questions or contact us directly.</p>
+        <button id="faqButton">FAQ</button>
+    </div>-->
+
 </body>
 
 </html>
