Login and signup fixade

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="sell.css">
     <link rel="stylesheet" href="shoppingcart.css">
     <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="login.css">
 
     <title>MealMate</title>
 </head>
