--- a/client/signup.html
+++ b/client/signup.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" onclick="validateAndSubmit()" id="signUpBtn" style="background-color: #263a4e; color: white; border-color: transparent;" disabled>Sign up</button>
+                    <button type="button" class="btn btn-primary" onclick="validateAndSubmit()" id="signUpBtn" disabled>Sign up</button>
                     
                 </div>
             </div>
