--- a/client/login.html
+++ b/client/login.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
+    <div id="loginContainer">
     <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -25,7 +29,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="logInBtn" style="background-color: #263a4e; color: white; border-color: transparent;">Log in</button>
+                    <button type="button" class="btn btn-primary" id="logInBtn">Log in</button>
                 </div>
             </div>
         </div>
@@ -45,10 +49,11 @@
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Stay signed in</button>
-                    <button type="button" class="btn btn-primary" id="logoutBtn" style="background-color: #263a4e; color: white; border-color: transparent;">Yes, sign out</button>
+                    <button type="button" class="btn btn-primary" id="logoutBtn">Yes, sign out</button>
                   </div>
                 </div>
             </div>
         </div>
+    </div>
 </body>
 </html>
