Done with sellform

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="shoppingcart.css">
     <link rel="stylesheet" href="profile.css">
     <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="loginsignup.css">
 
     <title>MealMate</title>
 </head>
