--- a/client/login.html
+++ b/client/login.html
@@ -16,11 +16,11 @@
                 </div>
                 <div class="modal-body">
                     <form id="logInform">
-                        <div class="form-group">
+                        <div class="loginform-group">
                             <label for="email">Email:</label>
                             <input type="text" class="form-control" id="email" name="email">
                         </div>
-                        <div class="form-group">
+                        <div class="passwordform-group">
                             <label for="password">Password:</label>
                             <input type="password" class="form-control" id="password" name="password">
                             <small id="passwordError" class="text-danger"></small>
