Fixat id på forms

--- a/client/profile.html
+++ b/client/profile.html
@@ -69,7 +69,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form id="logInform">
+                    <form id="newPasswordForm">
                         <div class="form-group">
                             <label for="password">New password:</label>
                             <input type="password" class="form-control" id="newPassword" name="email">
@@ -99,7 +99,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form id="logInform">
+                    <form id="changePhonenumberForm">
                         <div class="form-group">
                             <label for="password">New Phonenumber</label>
                             <input type="text" class="form-control" id="newEmail" name="email">
