--- a/client/footer.html
+++ b/client/footer.html
@@ -75,16 +75,13 @@
               Useful links
             </h6>
             <p>
-              <a href="#!" class="text-reset">Pricing</a>
+              <a href="#!" class="text-reset">My Profile</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Settings</a>
+              <a href="#!" class="text-reset">Sell Lunchboxes</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Orders</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Help</a>
+              <a href="#!" class="text-reset">About Us</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -109,8 +106,8 @@
 
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2021 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      © 2024 Copyright:
+      <a class="text-reset fw-bold" href="#!">MealMate</a>
     </div>
     <!-- Copyright -->
   </footer>
