--- a/client/index.html
+++ b/client/index.html
@@ -17,8 +17,8 @@
 
     <title>MealMate</title>
 </head>
-<body style="padding-top: 100px;">
-
+<!--<body style="padding-top: 100px;">-->
+<body>
     <nav class="navbar navbar-expand-lg" style="background-color: #006267;">
         <div class="container-fluid">
           <a id="mealMateLink" class="navbar-brand larger-text" href="#" style="color:white;"><strong>MealMate</strong></a>
