Login and signup links added to forms

--- a/client/login.html
+++ b/client/login.html
@@ -23,6 +23,9 @@
                             <small id="passwordError" class="text-danger"></small>
                         </div>
                     </form>
+                    <div style="text-align: center; margin-top: 10px;">
+                        <a href="#" id="signupLink">Don't have an account? Click here to create one</a>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
