--- a/client/signup.html
+++ b/client/signup.html
@@ -45,6 +45,9 @@
                             <input type="text" class="form-control" id="studentid" name="studentid" required>
                         </div>
                     </form>
+                    <div style="text-align: center; margin-top: 10px;">
+                        <a href="#" id="loginLink">Already have an account? Click here to login</a>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
