shopping cart + lite logingrejer

--- a/client/index.html
+++ b/client/index.html
@@ -26,19 +26,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#" style="color:white;">Sell</a>
+                <a id= "sellLink"class="nav-link" href="#" style="color:white;">Sell</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"style="color:white;">Contact</a>
+                <a id="contactLink" class="nav-link" href="#"style="color:white;">Contact</a>
               </li>
               <li class="nav-item">
-                <a id="logInLink" class="nav-link" href="#"style="color:white;">Log in</a>
+                <a id="loginLink" class="nav-link" href="#"style="color:white;">Log in</a>
               </li>
               <li class="nav-item">
-                <a id ="signUpLink" class="nav-link" href="#"style="color:white;">Sign up</a>
+                <a id ="signupLink" class="nav-link" href="#"style="color:white;">Sign up</a>
               </li>
               <li class="nav-item">
-                <a id ="logOutLink" class="nav-link d-none" href="#"style="color:white;">Log out</a>
+                <a id ="logoutLink" class="nav-link d-none" href="#"style="color:white;">Log out</a>
               </li>
             </ul>
             <div class="ml-auto">
