--- a/client/shoppingcart.html
+++ b/client/shoppingcart.html
@@ -1,17 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+<head>
+</head>
 <body>
 
-<div class="shoppingCartCont"style="background-color: #df6b3f;">
-
-    <h1> Shopping Cart</h1>
-    <div class="continueShopping">
-        <button type="button" id="continueShoppingBtn" onclick="homeview()" style="background-color: #263a4e; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">Continue Shopping</button>
+<div class="shoppingCartCont">
+    <div class="shoppingcartLeftWrap">
+        <div class="shoppingcartCards">
+        </div>
     </div>
-    <div class="checkout">
-        <button type="button" id="checkoutBtn" onclick ="checkoutview()" style="background-color: #263a4e; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">Checkout</button>
-    </div>
-</div>
-
+    <div class="shoppingcartRight">
+</div>   
 </body>
 </html>
