Fixed bug where close buttons had the same name

--- a/client/filter.html
+++ b/client/filter.html
@@ -44,7 +44,7 @@
                    <!-- This is filled dynamic -->
                   </form>
                 </div>
-                <span class="close", id="closeX">X</span>
+                <span class="closeFilter", id="closeX">X</span>
                 </div>
               </div>
             <label for="priceRange", class="priceRangeTitle" >Max price:  <span id="priceValue">50 kr</span></label>
