--- a/client/login.html
+++ b/client/login.html
@@ -7,7 +7,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Welcome, please sign in below</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="closeLogin" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -24,7 +24,7 @@
                         </div>
                     </form>
                     <div style="text-align: center; margin-top: 10px;">
-                        <a href="#" id="signupLink">Don't have an account? Click here to create one</a>
+                        <a href="#" id="redirectSignup">Don't have an account? Click here to create one</a>
                     </div>
                 </div>
                 <div class="modal-footer">
