--- a/client/signup.html
+++ b/client/signup.html
@@ -6,7 +6,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Welcome, please sign up below</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="closeSignup" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -46,7 +46,7 @@
                         </div>
                     </form>
                     <div style="text-align: center; margin-top: 10px;">
-                        <a href="#" id="loginLink">Already have an account? Click here to login</a>
+                        <a href="#" id="redirectLogin">Already have an account? Click here to login</a>
                     </div>
                 </div>
                 <div class="modal-footer">
