--- a/client/profile.html
+++ b/client/profile.html
@@ -6,9 +6,19 @@
 </head>
 
 <body>
+
     <div class="profileContainer">
         <h1 style="text-align: center;">My Profile</h1>
     
+    <nav class="profile-menu">
+        <u>
+            <li> <a id="accountbutton" href="#">Account details</a></li>
+            <li> <a id="purchaseHistoryBtn" href="#">Purchase history</a></li>
+            <li> <a id="soldProductsbutton" href="#">Sold products</a></li>
+            <li> <a id="settingsbutton" href="#">Settings</a></li>
+        </u>
+    </nav>
+
     <nav class="profile-navbar">
         <li><th>Name: </th></li>
         <li> <a href="">Nameholder</a></li>
@@ -37,6 +47,20 @@
     <nav class="profile-navbar">
         <li><th>Verified User: </th></li>
         <li> <a href="">YesOrNO</a></li>
+    </nav>
+
+    <nav class="profile-navbar">
+        <li><th>Purchase history</th></li>
+        <button type="button" class="btn btn-primary">
+            View
+        </button>
+     </nav>
+
+    <nav class="profile-navbar">
+        <li><th>Sold products</th></li>
+        <button type="button" class="btn btn-primary">
+            View
+        </button>
     </nav>
 
     <h3 style="text-align: center;">Settings</h3>
