--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="shoppingcart.css">
     <link rel="stylesheet" href="profile.css">
     <link rel="stylesheet" href="loginsignup.css">
-
+    <script async src="https://js.stripe.com/v2/"></script>
     <title>MealMate</title>
 </head>
 <!--<body style="padding-top: 100px;">-->
