implemented payment method images, handled id-errors in profile and disabled checkoutbutton upon an empty shopping car

--- a/client/profile.html
+++ b/client/profile.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" type="text/css" href="profile.css">
 </head>
 
-<body>
+<body id = "profileBody">
 
     <div class="profileContainer">
-        <h1 style="text-align: center;">My Profile</h1>
+        <h1 id= "profileHeader"style="text-align: center;">My Profile</h1>
     
     <nav class="profile-menu">
         <u>
