--- a/client/settings.html
+++ b/client/settings.html
@@ -43,10 +43,7 @@
       <div class="form-group">
         <label for="university">University:</label>
             <select class="form-control" id="settingUniversity" name="university" required>
-                <option value="">Please select a university</option>
-                <option value="university1">Linköpings Universitet</option>
-                <option value="university2">Lunds Universitet</option>
-                <option value="university3">Kungliga Tekniska Högskolan</option>
+                <option selected>Please select a university</option>
          </select>
       </div>
       <div class="form-group">
