sucsess.html implemented

--- a/client/success.html
+++ b/client/success.html
@@ -11,5 +11,14 @@
       <a href="/" class="btn btn-primary mt-3" id="backToHomeBtn">Back to Home</a>
     </p>
   </section>
+
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="ajax.js"></script>
+  <script src="checkout.js"></script>
+  <script>
+    window.onload = function() {
+      handleSuccess();
+    };
+  </script>
 </body>
 </html>
